tests/paczka1/small_fuzzy/95635067.err
Error in line 5: VMFT8rHIa S680 71,1
Error in line 4: S160 S680 95,9
